Solved Day 13 Part 1

--- a/advent-of-code-2017/advent-of-code-2017.csproj
+++ b/advent-of-code-2017/advent-of-code-2017.csproj
@@ -91,6 +91,12 @@
     <None Update="Day12\input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day13\example.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Day13\input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
