--- a/advent-of-code-2017/advent-of-code-2017.csproj
+++ b/advent-of-code-2017/advent-of-code-2017.csproj
@@ -103,6 +103,12 @@
     <None Update="Day14\input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day15\example.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Day15\input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
